Bug 10132 - 2.6.25 git regression, oops on boot
Summary: 2.6.25 git regression, oops on boot
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Thermal (show other bugs)
Hardware: All Linux
: P1 high
Assignee: Zhang Rui
URL:
Keywords:
: 10229 (view as bug list)
Depends on:
Blocks: 9832
  Show dependency tree
 
Reported: 2008-02-28 19:14 UTC by Zhang Rui
Modified: 2008-03-13 20:17 UTC (History)
4 users (show)

See Also:
Kernel Version: 2.6.25 git
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
proposed patch (942 bytes, patch)
2008-02-28 21:33 UTC, Lin Ming
Details | Diff
proposed patch (452 bytes, patch)
2008-02-28 21:36 UTC, Lin Ming
Details | Diff

Description Zhang Rui 2008-02-28 19:14:57 UTC
Subject         : 2.6.25-rc kernel hangs on boot
Submitter       : Jonathan McDowell <noodles@earth.li>
Date            : 2008-02-29 11:09
References      : http://marc.info/?l=linux-kernel&m=120423268404812&w=2
Handled-By      : "Zhang Rui" <rui.zhang@intel.com>

This entry is being used for tracking a regression from 2.6.24.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Lin Ming 2008-02-28 21:33:07 UTC
Created attachment 15078 [details]
proposed patch

Please have a try this simple patch

There is a memory overflow bug when copy NULL internal package element object to external
Comment 2 Lin Ming 2008-02-28 21:36:12 UTC
Created attachment 15080 [details]
proposed patch

sorry, wrong patch attached in comment #1

pls try this one.
Comment 3 Rafael J. Wysocki 2008-02-29 06:56:16 UTC
References : http://lkml.org/lkml/2008/2/28/369
Handled-By : Lin Ming <ming.m.lin@intel.com>
Patch : http://lkml.org/lkml/2008/2/29/49
Comment 4 Zhang Rui 2008-03-02 19:06:53 UTC
Patch in comment #2 fixes the problem.
Comment 5 Len Brown 2008-03-10 21:17:14 UTC
patch in comment #2 applied
Comment 7 Zhang Rui 2008-03-13 20:17:26 UTC
*** Bug 10229 has been marked as a duplicate of this bug. ***

Note You need to log in before you can comment on or make changes to this bug.